--- a/KMS.Web/Views/Home/Index.cshtml
+++ b/KMS.Web/Views/Home/Index.cshtml
@@ -22,138 +22,7 @@
 	</div>
 </div>
 
-<div class="home__collectionBlock">
-	<div class="home__collectionBlock--desktop">
-		<div class="collectionBlock__leftSelector--lining"></div>
-		<div class="collectionBlock__leftSelector">
-			<label class="collectionBlock__mainTitle">Bộ sưu tập phổ biến</label>
-			<label class="collectionBlock__subTitle">
-				Tổng hợp những đầu sách được quan tâm, tìm đọc và mượn
-				nhiều nhất.
-			</label>
-			<div class="collectionBlock__selectorGroup">
-				@await Html.PartialAsync("Home/_CollectionSelectorItem", new CollectionSelectorItemVM { title = "Tài liệu Địa chí" })
-				@await Html.PartialAsync("Home/_CollectionSelectorItem", new CollectionSelectorItemVM { title = "Báo, tạp chí" })
-				@await Html.PartialAsync("Home/_CollectionSelectorItem", new CollectionSelectorItemVM { title = "Sách điện tử" })
-				@await Html.PartialAsync("Home/_CollectionSelectorItem", new CollectionSelectorItemVM { title = "Đa phương tiện" })
-			</div>
-		</div>
-		<div class="collectionBlock__rightDocuments">
-			<div class="horizontal-grid-documents">
-				@for (int i = 1; i <= 10; i++)
-				{
-					@await Html.PartialAsync("Home/_CollectionDocumentCard",
-					new CollectionDocumentCardVM
-					{
-						image_url = $"https://covers.openlibrary.org/b/id/{i * 2 + 33000}-M.jpg",
-						title = "Sách nổi bật",
-						author = "UCVN KMS"
-					})
-								}
-			</div>
-			<div class="horizontal-grid-documents">
-				@for (int i = 0; i <= 7; i++)
-				{
-					@await Html.PartialAsync("Home/_CollectionDocumentCard",
-					new CollectionDocumentCardVM
-					{
-						image_url = $"https://covers.openlibrary.org/b/id/{i * 3 + 13000}-M.jpg",
-						title = "Sách hay",
-						author = "UCVN KMS"
-					})
-				}
-			</div>
-		</div>
-	</div>
-	<div class="home__collectionBlock--mobile custom-container">
-		<div class="home__collectionBlock-collectionCard">
-			<div class="home__collectionCard-header">
-				<div class="home__collectionCard-image-wrapper">
-					<img src="@ConstLocation.value/img/icons/book_f.svg" />
-				</div>
-				<div class="home__collectionCard-info">
-					<label class="home__collectionCard-main-title">Kinh tế học</label>
-					<label class="home__collectionCard-sub-title">Tư duy kinh tế cho mọi người</label>
-				</div>
-				<a class="home__collectionCard-goto">
-					<img src="@ConstLocation.value/img/icons/long_right_arrow_f.svg" />
-				</a>
-			</div>
-			<div class="home__collectionCard-body">
-				@for (int j = 0; j < 10; j++)
-				{
-					<div class="home__collection-book">
-						<div class="home__collection-book-image-wrapper">
-							<img data-src="@($"https://covers.openlibrary.org/b/id/{j + 300000}-M.jpg")" asp-append-version="true" />
-						</div>
-						<div class="home__collection-book-info">
-							<label class="home__collection-book-title">Nghệ thuật đánh cắp ý tưởng</label>
-							<label class="home__collection-book-author">Austin Kleon</label>
-						</div>
-					</div>
-				}
-			</div>
-		</div>
-
-		<div class="home__collectionBlock-collectionCard">
-			<div class="home__collectionCard-header">
-				<div class="home__collectionCard-image-wrapper">
-					<img src="@ConstLocation.value/img/icons/book_f.svg" />
-				</div>
-				<div class="home__collectionCard-info">
-					<label class="home__collectionCard-main-title">Tư duy kỹ năng mềm</label>
-					<label class="home__collectionCard-sub-title">Mở rộng tư duy, nâng tầm bản thân</label>
-				</div>
-				<a class="home__collectionCard-goto">
-					<img src="@ConstLocation.value/img/icons/long_right_arrow_f.svg" />
-				</a>
-			</div>
-			<div class="home__collectionCard-body">
-				@for (int j = 0; j < 10; j++)
-				{
-					<div class="home__collection-book">
-						<div class="home__collection-book-image-wrapper">
-							<img data-src="@($"https://covers.openlibrary.org/b/id/{j + 400000}-M.jpg")" asp-append-version="true" />
-						</div>
-						<div class="home__collection-book-info">
-							<label class="home__collection-book-title">Nghệ thuật đánh cắp ý tưởng</label>
-							<label class="home__collection-book-author">Austin Kleon</label>
-						</div>
-					</div>
-				}
-			</div>
-		</div>
-
-		<div class="home__collectionBlock-collectionCard">
-			<div class="home__collectionCard-header">
-				<div class="home__collectionCard-image-wrapper">
-					<img src="@ConstLocation.value/img/icons/book_f.svg" />
-				</div>
-				<div class="home__collectionCard-info">
-					<label class="home__collectionCard-main-title">Sách mới cập nhật</label>
-					<label class="home__collectionCard-sub-title">Sách mới nhất</label>
-				</div>
-				<a class="home__collectionCard-goto">
-					<img src="@ConstLocation.value/img/icons/long_right_arrow_f.svg" />
-				</a>
-			</div>
-			<div class="home__collectionCard-body">
-				@for (int j = 0; j < 10; j++)
-				{
-					<div class="home__collection-book">
-						<div class="home__collection-book-image-wrapper">
-							<img data-src="@($"https://covers.openlibrary.org/b/id/{j + 500000}-M.jpg")" asp-append-version="true" />
-						</div>
-						<div class="home__collection-book-info">
-							<label class="home__collection-book-title">Nghệ thuật đánh cắp ý tưởng</label>
-							<label class="home__collection-book-author">Austin Kleon</label>
-						</div>
-					</div>
-				}
-			</div>
-		</div>
-	</div>
-</div>
+@await Html.PartialAsync("Home/_CollectionDocument", Model.Collections)
 
 <div class="home__statistics-section-wrapper custom-container">
 	<div class="home__statistics-section">
@@ -189,113 +58,7 @@
 	</div>
 </div>
 	
-<div class="home__document-wrapper custom-container">
-	<div class="documet__stats-total">
-		<h1>Tài liệu mới nhất</h1>
-		<p class="documet__subtitle">༺ Chúng tôi đồng hành cùng bạn trên hành trình học tập và nghiên cứu ༻</p>
-	</div>
-
-	<div class="document__book-list-container-new">
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p1-new">
-				<img src="https://covers.openlibrary.org/b/id/93022-M.jpg" alt="Bìa sách Nhà Quản Trị Hiệu Quả">
-			</div>
-			<p class="document__book-title-new">Nhà Quản Trị Hiệu Quả – The Effective Executive PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p1-new">
-				<img src="https://covers.openlibrary.org/b/id/93390-M.jpg" alt="Bìa sách Nhà Quản Trị Hiệu Quả">
-			</div>
-			<p class="document__book-title-new">Nhà Quản Trị Hiệu Quả – The Effective Executive PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p2-new">
-				<img src="https://covers.openlibrary.org/b/id/93000-M.jpg" alt="Bìa sách Quản Trị Bằng Văn Hóa">
-			</div>
-			<p class="document__book-title-new">Quản Trị Bằng Văn Hóa PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p3-new">
-				<img src="https://covers.openlibrary.org/b/id/93300-M.jpg" alt="Bìa sách Nhà Lãnh Đạo Tương Lai">
-			</div>
-			<p class="document__book-title-new">Nhà Lãnh Đạo Tương Lai (Tái Bản 2023) PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p4-new">
-				<img src="https://covers.openlibrary.org/b/id/93009-M.jpg" alt="Bìa sách Một Đời Quản Trị">
-			</div>
-			<p class="document__book-title-new">Một Đời Quản Trị (Tái Bản 2019) PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p5-new">
-				<img src="https://covers.openlibrary.org/b/id/93980-M.jpg" alt="Bìa sách Bí Mật Tư Duy Triệu Phú">
-			</div>
-			<p class="document__book-title-new">Bí Mật Tư Duy Triệu Phú (Tái Bản 2021) PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p1-new">
-				<img src="https://suckhoedoisong.qltns.mediacdn.vn/Images/duylinh/2019/07/07/truyenkieu2018_master_resize.jpg" alt="Bìa sách Nhà Quản Trị Hiệu Quả">
-			</div>
-			<p class="document__book-title-new">Nhà Quản Trị Hiệu Quả – The Effective Executive PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p1-new">
-				<img src="https://covers.openlibrary.org/b/id/92800-M.jpg" alt="Bìa sách Nhà Quản Trị Hiệu Quả">
-			</div>
-			<p class="document__book-title-new">Nhà Quản Trị Hiệu Quả – The Effective Executive PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p2-new">
-				<img src="https://bizweb.dktcdn.net/thumb/1024x1024/100/427/035/products/0dbeaf8f-92f6-484d-aa32-332eb2cf432a.jpg?v=1624331071287" alt="Bìa sách Quản Trị Bằng Văn Hóa">
-			</div>
-			<p class="document__book-title-new">Quản Trị Bằng Văn Hóa PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p3-new">
-				<img src="https://vuonhoaphatgiao.com/uploads/noidung/images/van_hoa/truyen-kieu.jpg" alt="Bìa sách Nhà Lãnh Đạo Tương Lai">
-			</div>
-			<p class="document__book-title-new">Nhà Lãnh Đạo Tương Lai (Tái Bản 2023) PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p4-new">
-				<img src="https://bizweb.dktcdn.net/thumb/1024x1024/100/427/035/products/0dbeaf8f-92f6-484d-aa32-332eb2cf432a.jpg?v=1624331071287" alt="Bìa sách Một Đời Quản Trị">
-			</div>
-			<p class="document__book-title-new">Một Đời Quản Trị (Tái Bản 2019) PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-
-		<div class="document__book-item-new">
-			<div class="document__book-cover-new document__p5-new">
-				<img src="https://bizweb.dktcdn.net/100/449/104/products/20250420-makingcomics-bia-taygam5cm-bleed2mm-v2-1-1746239187672.jpg?v=1746239219543" alt="Bìa sách Bí Mật Tư Duy Triệu Phú">
-			</div>
-			<p class="document__book-title-new">Bí Mật Tư Duy Triệu Phú (Tái Bản 2021) PDF</p>
-			<div class="document__basic-new"></div>
-		</div>
-	</div>
-
-</div>
-
+@await Html.PartialAsync("Home/_DocumentNew",Model.DocumentNews)
 
 <div class="home__end-section">
 	<div class="information-section__info-block-wrapper" id="information-section__info-block-wrapper">
