--- a/KMS.Web/Views/Search/Index.cshtml
+++ b/KMS.Web/Views/Search/Index.cshtml
@@ -4,7 +4,7 @@
 @model KMS.Shared.DTOs.Search.SearchResponse
 
 @{
-	ViewData["Title"] = "Tra cứu tập trung UCVN KMS";
+	ViewData["Title"] = "Tra cứu Opac";
 	Layout = "~/Pages/Shared/_LayoutPublish.cshtml";
 }
 
