--- a/KMS.Web/Views/Home/Index.cshtml
+++ b/KMS.Web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @model HomeViewModel
 
 @{
-	ViewData["Title"] = "Tra cứu tập trung UCVN KMS";
+	ViewData["Title"] = "Tra cứu Opac";
 	Layout = "~/Pages/Shared/_LayoutPublish.cshtml";
 }
 
