--- a/KMS.Web/Pages/Shared/_LayoutPublish.cshtml
+++ b/KMS.Web/Pages/Shared/_LayoutPublish.cshtml
@@ -34,7 +34,7 @@
             loginUrl: '@ConstLocation.value@Url.Action("Login", "Auth")',
             logoutUrl: '@ConstLocation.value@Url.Action("Logout", "Auth")',
             searchUrl: '@ConstLocation.value@Url.Action("Index", "Search")',
-            searchCollectionUrl: '@ConstLocation.value@Url.Action("Collection", "Search")'
+            searchCollectionUrl: '@ConstLocation.value@Url.Action("CollectionDdoc", "Search")'
         };
     </script>
 </head>
