--- a/KMS.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/KMS.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -17,7 +17,7 @@
                 <div>
                     <dt>Địa chỉ:</dt>
                     <dd>
-                        Tầng 2 - 29T1, Hoàng Đạo Thúy, Yên Hòa, Tp Hà Nội
+                        Số 235, đường Hoàng Quốc Việt, phường Cổ Nhuế 1, quận Bắc Từ Liêm, Hà Nội
                     </dd>
                 </div>
                 <div>
@@ -26,7 +26,7 @@
                 </div>
                 <div>
                     <dt>Email:</dt>
-                    <dd>info@ouc.vn</dd>
+                    <dd>epu@edu.vn</dd>
                 </div>
                 <div>
                     <dt>Website:</dt>
