--- a/KMS.Web/Views/Shared/Header/_Header.cshtml
+++ b/KMS.Web/Views/Shared/Header/_Header.cshtml
@@ -25,13 +25,13 @@
 					<span class="link-text">Tìm kiếm tài liệu</span>
 				</span>
 			</a>
-			<a class="no-select" href="@ConstLocation.value@Url.Action("Index", "Search")">
+			<a class="no-select" href="@ConstLocation.value@Url.Action("CollectionPdoc", "Search")">
 				<span class="link-text-wrapper">
 					<span class="link-text">Tài liệu in</span>
 					<span class="link-text">Tài liệu in</span>
 				</span>
 			</a>
-			<a class="no-select" href="@ConstLocation.value@Url.Action("Index", "Search")">
+			<a class="no-select" href="@ConstLocation.value@Url.Action("CollectionDdoc", "Search")">
 				<span class="link-text-wrapper">
 					<span class="link-text">Tài liệu số</span>
 					<span class="link-text">Tài liệu số</span>
