--- a/KMS.Web/Views/Shared/SearchPage/_SearchResults_DocumentCard.cshtml
+++ b/KMS.Web/Views/Shared/SearchPage/_SearchResults_DocumentCard.cshtml
@@ -230,13 +230,13 @@
 			</div>
 		</div>
 
-		<div class="documentCard__source-info">
+		@* <div class="documentCard__source-info">
 			<img src="@ConstLocation.value/img/search-page/icons/source-icon.svg" alt="Source Icon"
 				 class="documentCard__source-image" />
 			<div class="documentCard__source-text">
 				Nguồn: @tenant_name
 			</div>
-		</div>
+		</div> *@
 
 		@if (isDigital)
 		{
