--- a/KMS.Web/Views/Home/Index.cshtml
+++ b/KMS.Web/Views/Home/Index.cshtml
@@ -67,7 +67,7 @@
 				<div class="information-section__content-block">
 					<p class="information-section__content-title">
 						Khám phá tri thức: <br>
-						Bắt đầu hành trình của bạn cùng UCVN.KMs
+						Bắt đầu hành trình của bạn cùng thư viện
 					</p>
 					<p class="information-section_content-description">
 						Tại hệ thống tra cứu thư viện trực tuyến, bạn có thể nhanh chóng tìm thấy sách, tài liệu học tập, luận văn và nhiều nguồn tham khảo học thuật khác. Không chỉ gói gọn trong thư viện của chúng tôi, hệ thống còn kết nối với các thư viện liên kết, mở rộng cánh cửa tri thức cho bạn. Dù là sinh viên, giảng viên hay bất kỳ ai yêu thích việc đọc và nghiên cứu, chỉ cần nhập từ khóa, chọn bộ sưu tập phù hợp và bắt đầu hành trình khám phá nguồn tài nguyên phong phú luôn được cập nhật liên tục!
