--- a/KMS.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/KMS.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -8,8 +8,8 @@
     <div class="section_trianglen border-0"></div>
     <div class="footer__background">
         <div class="footer__topBlock">
-            <img class="footer__logo" src="@ConstLocation.value/img/logo/UC_KMS_WHITE.webp" asp-append-version="true" />
-            <img class="footer__logo-mobile" src="@ConstLocation.value/img/logo/UCVN_WHITE.png" asp-append-version="true" />
+            <img class="footer__logo" src="@ConstLocation.value/img/logo/UC_KMS_WHITE.PNG" asp-append-version="true" />
+            <img class="footer__logo-mobile" src="@ConstLocation.value/img/logo/UC_KMS_WHITE.png" asp-append-version="true" />
             <div class="footer__info">
                 <div>
                    Thư viện - Trường Đại học Điện Lực
