--- a/KMS.Web/Views/Shared/Header/_Header.cshtml
+++ b/KMS.Web/Views/Shared/Header/_Header.cshtml
@@ -6,11 +6,11 @@
 	<div class="header__overlay"></div>
 	<div class="header__left w-100">
 		<a href="@ConstLocation.value/" class="logo">
-			<img class="logo__original" src="@ConstLocation.value/img/logo/UC_KMS.webp" alt="Logo UC KMS"
+			<img class="logo__original" src="@ConstLocation.value/img/logo/UC_KMS2.PNG" alt="Logo UC KMS"
 				asp-append-version="true" />
-			<img class="logo__white" src="@ConstLocation.value/img/logo/UC_KMS_WHITE.webp" alt="Logo UC KMS"
+			<img class="logo__white" src="@ConstLocation.value/img/logo/UC_KMS_WHITE.PNG" alt="Logo UC KMS"
 				asp-append-version="true" />
-			<img class="logo--mobile" src="@ConstLocation.value/img/logo/UCVN_WHITE.png" asp-append-version="true" />
+			<img class="logo--mobile" src="@ConstLocation.value/img/logo/UC_KMS_WHITE.png" asp-append-version="true" />
 		</a>
 		<nav class="nav">
 			<a class="no-select" href="@ConstLocation.value/">
