--- a/KMS.Web/Views/Shared/DocumentDetail/_Info.cshtml
+++ b/KMS.Web/Views/Shared/DocumentDetail/_Info.cshtml
@@ -146,7 +146,7 @@
 		<img src="@thumb" onerror="this.onerror=null;this.parentElement.remove()" asp-append-version="true" />
 	</div>
 	<div class="second-documentDetail__buttons">
-		<a href="#" class="buttons__read">@Html.ReadSvg(false) Đọc ngay</a>
+		<a onclick="window.open('@ConstLocation.value/doc-tai-lieu','_blank')" class="buttons__read">@Html.ReadSvg(false) Đọc ngay</a>
 		<a href="#" class="buttons__borrow">@Html.BorrowSvg(false) Mượn sách</a>
 	</div>
 </div>
