--- a/KMS.Web/Views/Shared/DocumentDetail/_LibraryDocument.cshtml
+++ b/KMS.Web/Views/Shared/DocumentDetail/_LibraryDocument.cshtml
@@ -24,7 +24,7 @@
 					var defaultImage = ConstLocation.value + "/img/" + DefaultCoverPhoto.GetImageForBibType(item.bib_type ?? "");
 
 					<div class="library-container__card-detail-book">
-						<img src="@defaultImage"
+						<img src="@(thumb ?? defaultImage)"
 							 alt="@item.title" />
 
 						<div class="library-container__content-detail-book">
@@ -55,11 +55,11 @@
 
 						<div>
 							<button class="library-container__btn-book-detail-book">
-								<i class="library-container__fas-detail-book library-container__fa-external-link-alt-detail-book"></i>
+								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M568.482 177.448L424.479 313.433C409.3 327.768 384 317.14 384 295.985v-71.963c-144.575.97-205.566 35.113-164.775 171.353 4.483 14.973-12.846 26.567-25.006 17.33C155.252 383.105 120 326.488 120 269.339c0-143.937 117.599-172.5 264-173.312V24.012c0-21.174 25.317-31.768 40.479-17.448l144.003 135.988c10.02 9.463 10.028 25.425 0 34.896zM384 379.128V448H64V128h50.916a11.99 11.99 0 0 0 8.648-3.693c14.953-15.568 32.237-27.89 51.014-37.676C185.708 80.83 181.584 64 169.033 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48v-88.806c0-8.288-8.197-14.066-16.011-11.302a71.83 71.83 0 0 1-34.189 3.377c-7.27-1.046-13.8 4.514-13.8 11.859z" /></svg>
 								<span>Muợn sách</span>
 							</button>
 							<button class="library-container__btn-book-detail-book-white mt-1">
-								<i class="library-container__far-detail-book library-container__fa-star-detail-book"></i>
+								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 224h192V32H0v192zM64 96h64v64H64V96zm192-64v192h192V32H256zm128 128h-64V96h64v64zM0 480h192V288H0v192zm64-128h64v64H64v-64zm352-64h32v128h-96v-32h-32v96h-64V288h96v32h64v-32zm0 160h32v32h-32v-32zm-64 0h32v32h-32v-32z" /></svg>
 								<span>Yêu thích</span>
 							</button>
 						</div>
