--- a/KMS.Web/Views/Shared/SearchBar/_SearchBar.cshtml
+++ b/KMS.Web/Views/Shared/SearchBar/_SearchBar.cshtml
@@ -21,18 +21,18 @@
 	<div class="search-bar__detail-document">
 		<div class="search-bar__header-detail">
 			<button aria-label="Back">
-				<i class="fas fa-arrow-left"></i>
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M134.059 296H436c6.627 0 12-5.373 12-12v-56c0-6.627-5.373-12-12-12H134.059v-46.059c0-21.382-25.851-32.09-40.971-16.971L7.029 239.029c-9.373 9.373-9.373 24.569 0 33.941l86.059 86.059c15.119 15.119 40.971 4.411 40.971-16.971V296z" /></svg>
 				<a onclick="@(isDocument ? "window.close()" : "history.back()")">Quay lại</a>
 			</button>
 			<div class="spacer"></div>
 			<button aria-label="Bookmark" style="font-weight: normal; font-size: 12px; padding: 4px 10px;">
-				<i class="far fa-bookmark"></i>
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z" /></svg>
 			</button>
 			<button aria-label="QR Code" style="font-weight: normal; font-size: 12px; padding: 4px 10px; margin-left: 8px;">
-				<i class="fas fa-qrcode"></i>
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 224h192V32H0v192zM64 96h64v64H64V96zm192-64v192h192V32H256zm128 128h-64V96h64v64zM0 480h192V288H0v192zm64-128h64v64H64v-64zm352-64h32v128h-96v-32h-32v96h-64V288h96v32h64v-32zm0 160h32v32h-32v-32zm-64 0h32v32h-32v-32z" /></svg>
 			</button>
 			<button aria-label="Share" style="margin-left: 8px;">
-				<i class="fas fa-share-alt"></i>
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M352 320c-22.608 0-43.387 7.819-59.79 20.895l-102.486-64.054a96.551 96.551 0 0 0 0-41.683l102.486-64.054C308.613 184.181 329.392 192 352 192c53.019 0 96-42.981 96-96S405.019 0 352 0s-96 42.981-96 96c0 7.158.79 14.13 2.276 20.841L155.79 180.895C139.387 167.819 118.608 160 96 160c-53.019 0-96 42.981-96 96s42.981 96 96 96c22.608 0 43.387-7.819 59.79-20.895l102.486 64.054A96.301 96.301 0 0 0 256 416c0 53.019 42.981 96 96 96s96-42.981 96-96-42.981-96-96-96z" /></svg>
 				<span>Chia sẻ</span>
 			</button>
 		</div>
