--- a/KMS.Web/wwwroot/css/components/search-bar/style.css
+++ b/KMS.Web/wwwroot/css/components/search-bar/style.css
@@ -69,6 +69,12 @@
     z-index: 1;
 }
 
+.search-bar__header-detail  svg {
+    width:12px;
+    fill:white;
+    stroke:white;
+}
+
 .search-bar.grow {
     animation: bounce-grow 0.5s forwards;
 }
